# async-smtp-lite

./: Cargo.toml  README.md
demos/smol/: Cargo.toml
demos/smol/src/: aws_workmail.rs  gmail.rs
src/: client.rs  connection.rs  lib.rs  session.rs
